# clash-rs

./: .gitignore  Cargo.toml  cache.db  config.yaml
.claude/: ._worktrees
clash-bin/src/: main.rs
clash-bin/tests/data/config/: ._tproxy.yaml
clash-dns/: Cargo.toml
clash-ffi/: Cargo.toml
clash-ffi/src/: lib.rs
clash-lib/: Cargo.toml  build.rs
clash-lib/src/: lib.rs  session.rs
clash-lib/src/app/: logging.rs
clash-lib/src/app/api/: mod.rs
clash-lib/src/app/dispatcher/: dispatcher_impl.rs  tracked.rs
clash-lib/src/app/dns/: config.rs  dhcp.rs  dns_client.rs  helper.rs
clash-lib/src/app/outbound/: manager.rs
clash-lib/src/app/remote_content_manager/: mod.rs
clash-lib/src/app/router/: mod.rs
clash-lib/src/common/: auth.rs  defer.rs
clash-lib/src/common/http/: client.rs
clash-lib/src/config/internal/: proxy.rs
clash-lib/src/proxy/: datagram.rs
clash-lib/src/proxy/converters/: shadowsocks.rs  socks5.rs  tor.rs  trojan.rs  tuic.rs  utils.rs  vless.rs  vmess.rs
clash-lib/src/proxy/hysteria2/: codec.rs  congestion.rs  mod.rs  salamander.rs  udp_hop.rs
clash-lib/src/proxy/ssh/: ._connector.rs  auth.rs  mod.rs
clash-lib/src/proxy/tor/: mod.rs
clash-lib/src/proxy/tproxy/: mod.rs
clash-lib/src/proxy/transport/: grpc.rs  h2.rs  mod.rs  tcp_http.rs  tls.rs  vless_encryption.rs  xhttp.rs
clash-lib/src/proxy/trojan/: datagram.rs  mod.rs
clash-lib/tests/: api_tests.rs  smoke_tests.rs
clash-lib/tests/common/: mod.rs
clash-netstack/src/: tcp_stream.rs
scripts/: build_apple.sh  build_ios.sh  build_sim.sh  build_universal.sh
(+44 files in other folders)
