[package]
name = "clash-ffi"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
# NOTE: `default-features = false` disables clash-lib's default crypto backend (aws-lc-rs),
# which breaks `russh` unless we explicitly enable a backend feature.
clash-lib = { path = "../clash-lib", default-features = false, features = ["shadowsocks", "tuic", "ssh", "zero_copy", "aws-lc-rs"] }

[lib]
name = "clashrs"
crate-type = ["staticlib", "cdylib"]
