[package]
name = "clash-ffi"
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
clash-lib = { path = "../clash-lib",  features = ["shadowsocks", "tuic", "ssh", "zero_copy"] }
once_cell = "1.21.3"

[lib]
name = "clashrs"
crate-type = ["staticlib", "cdylib"]

